Pokedstudio composited layer is not correctly rendered by Metal on Apple Silicon #105100

Closed
opened 2023-02-22 22:03:40 +01:00 by Michael Jones (Apple) · 1 comment

System Information
Operating system: MacOS 13.2
Graphics card: Apple M2 Max GPU

Blender Version
Broken: Blender 3.5 beta
Worked: Blender 3.4

Short description of error
Pokedstudio is not rendered correctly. The first layer appears okay, but the second composited layer with the headlight beams does not render.

Exact steps for others to reproduce the error
Download and render Pokedstudio splash screen scene using Metal with default settings.

Observed result:image
Expected result:image

**System Information** Operating system: MacOS 13.2 Graphics card: Apple M2 Max GPU **Blender Version** Broken: Blender 3.5 beta Worked: Blender 3.4 **Short description of error** Pokedstudio is not rendered correctly. The first layer appears okay, but the second composited layer with the headlight beams does not render. **Exact steps for others to reproduce the error** Download and render [Pokedstudio splash screen scene](https://cloud.blender.org/p/gallery/57e51eaa0fcf29412d1f1e76) using Metal with default settings. Observed result:![image](/attachments/074ddc5e-812a-4ab0-9303-da090e559e67) Expected result:![image](/attachments/45c09a1a-54f7-4e1e-abf0-461c89a26890)
1.4 MiB
1.5 MiB
Michael Jones (Apple) added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-02-22 22:03:41 +01:00
Pratik Borhade added
Module
Render & Cycles
Status
Confirmed
Platform
macOS
and removed
Status
Needs Triage
labels 2023-02-23 06:22:46 +01:00
Pratik Borhade added
Priority
High
and removed
Priority
Normal
labels 2023-02-23 06:23:48 +01:00
Member

Description indicates its a regression so raising the priority.

Description indicates its a regression so raising the priority.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-23 11:07:42 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105100
No description provided.